tests/frontend_tests/error_if_open_paren.c
int main() {
  // error: expected '(' after 'if'
  if 10) return 3;
}
